20-Apache-Airflow-on-EKS/kube-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    app: airflow
