20-Apache-Airflow-on-EKS/kube-manifests/05-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: airflow
  labels:
    app: mariadb
spec:
  type: ClusterIP
  clusterIP: None   # Headless: StatefulSet DNS (mariadb-0.mariadb.airflow.svc.cluster.local)
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: mariadb
